--- a/radio/index.html
+++ b/radio/index.html
@@ -24,7 +24,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <div class="clearfix borderbox" id="page"><!-- column -->
    <div class="colelem" id="u97"><!-- custom html -->
     <audio controls>
-       <source src="207.244.77.236:10195">
+       <source src="radio.m3u">
 </audio>
    </div>
    <div class="verticalspacer" data-offset-top="269" data-content-above-spacer="268" data-content-below-spacer="232"></div>
